--- a/index.css
+++ b/index.css
@@ -8,6 +8,13 @@ color: white;
     width: 50%;
 }
 
+.score1{
+     display: flex;
+     padding-left: 35%;
+}
+.score1 > h2{
+    margin-left: 5%;
+}
 @media (min-width: 600px) {
     .middleline{
         display: none;
@@ -15,7 +22,7 @@ color: white;
 }
 @media (max-width: 600px) {
     .box{
-        margin-top: 26%;
+        margin-top: 6%;
     }
 }
 .btncircle{
